<resources>
    <string name="app_name">Book Store App Stage 1</string>
    <string name="hint_product_name">Product Name</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="save">save</string>
</resources>
